--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <version>3.0.4</version>
         </dependency>
 
-    </dependencies>
+        <!-- ojdbc6 -->
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc6 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.4</version>
+        </dependency>
+
+</dependencies>
 
 </project>
