--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,11 @@
-driver=org.mariadb.jdbc.Driver
-url=jdbc:mariadb://localhost:49153/test_db
-username=root
-password=root
+# mariadb
+#driver=org.mariadb.jdbc.Driver
+#url=jdbc:mariadb://localhost:48000/test_db
+#username=root
+#password=root
+
+# oracle
+driver=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:xe
+username=member
+password=member
